TCPServer and TCPClient classes added.

--- a/MILSTD1553ClassLibrary/MILSTD1553ClassLibrary.csproj
+++ b/MILSTD1553ClassLibrary/MILSTD1553ClassLibrary.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TCPClient.cs" />
+    <Compile Include="TCPServer.cs" />
     <Compile Include="Frame.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
