--- a/MILSTD1553ClassLibrary/MILSTD1553ClassLibrary.csproj
+++ b/MILSTD1553ClassLibrary/MILSTD1553ClassLibrary.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandWord.cs" />
     <Compile Include="TCPClient.cs" />
     <Compile Include="TCPServer.cs" />
     <Compile Include="Frame.cs" />
